[package]
name = "panel_detector"
version = "0.1.0"
edition = "2021"

[dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSPanel", "NSWindow", "NSScreen", "NSView", "NSButton", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry"] }
core-graphics = "0.25"
